--- a/day-07/day-07-site-complete/styles/styles-grid-introduction.css
+++ b/day-07/day-07-site-complete/styles/styles-grid-introduction.css
@@ -4,7 +4,9 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -13,25 +15,44 @@ html {
 /* Some default styles to make each box visible */
 .box {
   font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:white;
+  color: white;
   font-size: 100px;
   text-align: center;
-  text-shadow:4px 4px 0 rgba(0,0,0,0.1);
-  padding:10px;
+  text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.1);
+  padding: 10px;
 }
 
 /* Colours for each box */
-.box1 { background:#1abc9c;}
-.box2 { background:#3498db;}
-.box3 { background:#9b59b6;}
-.box4 { background:#34495e;}
-.box5 { background:#f1c40f;}
-.box6 { background:#e67e22;}
-.box7 { background:#e74c3c;}
-.box8 { background:#bdc3c7;}
-.box9 { background:#2ecc71;}
-.box10 { background:#16a085;}
-
+.box1 {
+  background: #1abc9c;
+}
+.box2 {
+  background: #3498db;
+}
+.box3 {
+  background: #9b59b6;
+}
+.box4 {
+  background: #34495e;
+}
+.box5 {
+  background: #f1c40f;
+}
+.box6 {
+  background: #e67e22;
+}
+.box7 {
+  background: #e74c3c;
+}
+.box8 {
+  background: #bdc3c7;
+}
+.box9 {
+  background: #2ecc71;
+}
+.box10 {
+  background: #16a085;
+}
 
 /* We start writing out grid here. The above is just page setup */
 .container {
@@ -45,5 +66,5 @@ html {
 }
 
 .box {
-/*	width: 33.33333333%;	*/
+  /*	width: 33.33333333%;	*/
 }
