--- a/day-08/a-07-start/scss/styles.scss
+++ b/day-08/a-07-start/scss/styles.scss
@@ -1,2 +1,13 @@
 @charset "utf-8";
 /* CSS Document */
+
+@import "variables";
+@import "mixins";
+@import "resset";
+@import "element";
+@import "body";
+@import "header";
+@import "banner";
+@import "grid";
+@import "footer";
+@import "medias";
